# poker-decentralized-rng

./: .gitignore  CMakeLists.txt  LICENSE  README.md  decentralized_rng_dll.cpp  decentralized_rng_dll.h  makefile
award_interface/: CMakeLists.txt  README.md
award_interface/include/decentralized_rng/: award_interface.h
award_rng/: CMakeLists.txt  README.md  main.cpp
decentralized_rng_award_interface/: CMakeLists.txt  README.md
decentralized_rng_award_interface/include/decentralized_rng/: award_interface.h
decentralized_rng_hand_interface/: CMakeLists.txt  README.md
decentralized_rng_hand_interface/include/decentralized_rng/: hand_interface.h
decentralized_rng_utils/: CMakeLists.txt  README.md
decentralized_rng_utils/include/decentralized_rng/: utils.h
decentralized_rng_utils/src/: sfmt.cpp
deck_interface/: CMakeLists.txt  README.md
deck_interface/include/decentralized_rng/: deck_interface.h
deck_rng/: CMakeLists.txt  README.md  main.cpp
modules/: endian.h  keccak.cpp  sfmt.cpp  sfmt.h  shuffle_knuth.h
modules/Keccak/: keccak.h
modules/SFMT-1.5.1/: SFMT.h
poker_award_rng/: CMakeLists.txt  README.md  main.cpp
poker_hand_rng/: CMakeLists.txt  README.md  main.cpp
utils/: CMakeLists.txt  README.md
utils/include/decentralized_rng/: utils.h
utils/src/: keccak.cpp
utils/src/SFMT-1.5.1/: SFMT.c
